fixed badges to work on mobile

--- a/assets/stylesheets/widgets/results/default/master.css
+++ b/assets/stylesheets/widgets/results/default/master.css
@@ -3,44 +3,44 @@
   padding: 24px;
 }
 .tf-results .personality-blend{
-  text-align:center;
+  text-align: center;
 }
 .tf-results .personality-blend .badges-container{
-  max-width:500px;
-  margin:0px auto;
+  max-width: 500px;
+  margin: 0px auto;
 }
 .tf-results .personality-blend .badges-container .left-badge{
-  width:160px;
-  height:160px;
-  z-index:1;
-  position:relative;
-  background-size: 100px 100px;
-  border-radius:50%;
+  width: 30%;
+  padding:30px;
+  z-index: 1;
+  position: relative;
+  border-radius: 50%;
   border: 2px solid;
-  background-repeat:no-repeat;
-  background-position:center; 
-  display:inline-block;
-  background-color:rgba(255,255,255, .5);
+  display: inline-block;
+  background-color: rgba(255,255,255, .5);
+}
+.tf-results .personality-blend .badges-container .left-badge img{
+  width: 100%;
 }
 .tf-results .personality-blend .badges-container .right-badge{
-  width:160px;
-  height:160px;
-  position:relative;
-  background-size: 100px 100px;
-  border-radius:50%;
+  width: 30%;
+  padding:30px;
+  position: relative;
+  border-radius: 50%;
   border: 2px solid;
-  background-repeat:no-repeat;
-  background-position:center; 
-  margin-left:-30px;
-  display:inline-block;
+  margin-left: -30px;
+  display: inline-block;
+}
+.tf-results .personality-blend .badges-container .right-badge img{
+  width: 100%;
 }
 .tf-results .personality-blend .name{
-  font-size:24px;
+  font-size: 24px;
   margin: 12px 0px;
 }
 .tf-results .personality-blend .blend-description{
-  width:100%;
-  margin:0px auto;
-  position:relative;
-  text-align:left;
+  width: 100%;
+  margin: 0px auto;
+  position: relative;
+  text-align: left;
 }
